apps/patch/dev/loruceanro/patches/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: loruceanro-frontend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
